# advent_of_code

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  utils.rs  y2015.rs  y2016.rs  year.rs
src/y2015/: day1.rs  mod.rs
src/y2016/: day1.rs
src/y2022/: day0.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2023/: day1.rs  day10.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs
src/y2024/: day0.rs  day1.rs  day11.rs  day2.rs  day3.rs  day4.rs
