[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.10"
md5 = "0.7.0"
regex = "1.10.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
